components/cartography/deployment/neo4j/neo4j-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cartography
    component: neo4j
  name: neo4j-service
  namespace: cartography
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 7473
      targetPort: 7473
    - name: http
      port: 7474
      targetPort: 7474
    - name: discovery
      port: 5000
      targetPort: 5000
    - name: raft
      port: 7000
      targetPort: 7000
    - name: tx
      port: 6000
      targetPort: 6000
  selector:
    app: cartography
    component: neo4j

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cartography
    component: neo4j
  name: neo4j-bolt-service
  namespace: cartography
spec:
  type: LoadBalancer
  ports:
    - name: bolt
      port: 7687
      targetPort: 7687
      protocol: TCP
  selector:
    app: cartography
    component: neo4j
